# Translation_AI_Agent

./: README.md  pyproject.toml
src/translation_ai_agent/: crew.py  main.py
src/translation_ai_agent/config/: agents.yaml  tasks.yaml
