[project]
name = "translation_ai_agent"
version = "0.1.0"
description = "translation-ai-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
translation_ai_agent = "translation_ai_agent.main:run"
run_crew = "translation_ai_agent.main:run"
train = "translation_ai_agent.main:train"
replay = "translation_ai_agent.main:replay"
test = "translation_ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
